--- a/Periodic notes/2023-08-18.md
+++ b/Periodic notes/2023-08-18.md
@@ -1,15 +1,15 @@
-# Friday 18th September, 2023
+# Пятница 18 сентября, 2023
 
-This is a daily note. It is here as an example of excluding tasks under a heading.
+Это ежедневная заметка. Она здесь как пример исключения задач по заголовку.
 
-Maybe you want to add some quick tasks that you thought of while journaling:
+Возможно, вы хотите добавить несколько быстрых задач, о которых вы подумали во время заполнения ежедневной заметки:
 
-- [ ] Call [[👤Mum]] and wish her a happy birthday 🔼
+- [ ] Позвонить [👤Мама](../People/👤Мама.md) и поздравить ее с днем рождения🔼
 
-But you might have a daily habit tracker which you **don't** want to add to your master task list. In this case we can exclude the heading in the [tasks.js](../00%20Documentation/tasks.js.md) config.
+Но у вас может быть ежедневный трекер привычек, который вы **не хотите** добавлять в свой основной список задач. В этом случае мы можем исключить заголовок из конфигурации [tasks.js](../00%20Documentation/tasks.js.md).
 
-## 🌱 Daily Habits
+## 🌱 Ежедневные привычки
 
-- [ ] Drink a glass of water
-- [ ] Work out for 30 minutes
-- [ ] Take over the world
+- [ ] Выпить стакан воды
+- [ ] Тренировка на 30 минут
+- [ ] Захватить мир
