--- a/01 Project Management/Projects/Личное. Homeassistant. Настроить камеру aqara g4.md
+++ b/01 Project Management/Projects/Личное. Homeassistant. Настроить камеру aqara g4.md
@@ -8,7 +8,7 @@ template_destination_folder: 01 Project Management/Projects
 ```dataviewjs
 dv.view('project-progress')
 ```
-- [ ] тест #🔼 ✅ 2024-05-18
+- [x] тест #🔼 ✅ 2024-05-18
 
 Add G4 to your Apple Home first
 Import G4 from Apple home to Aqara app
